# vook_db_v3

./: .gitignore  config.yaml  design.py  pyproject.toml
notebooks/: design.ipynb
tests/: test_vook_db_v2.py
